--- a/css/theme_extra.css
+++ b/css/theme_extra.css
@@ -138,7 +138,7 @@ code.cs, code.c {
     font-weight: bold;
 }
 .header{
-    display: inline-block;
+    display: inline;
     font-size: larger;
     margin-left: 5px;
 
